derive/tests/snapshots/referenced_row_methods/Player/get_all_players.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `player` table.
    pub fn get_all_players<'a>(&'a self) -> impl Iterator<Item = Player> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().player().iter()
    }
}
