derive/tests/snapshots/referenced_row_methods/Player/table.snap
---
source: derive/src/characterization_tests.rs
---
// Documentation appended to the struct:
///
/// # Tables referencing the `player` table
///
/// - the `circle` table (`self`)
/// - the `referee` table (`self`)

pub trait this_compilation_error_occurs_because_your_foreign_key_referencing_the_player_table_needs_to_define_a_strategy_for_on_delete_or_the_player_table_has_no_referenced_by_attribute_referencing_the_circle_table {}
pub trait this_compilation_error_occurs_because_your_foreign_key_referencing_the_player_table_needs_to_define_a_strategy_for_on_delete_or_the_player_table_has_no_referenced_by_attribute_referencing_the_referee_table {}
pub trait this_compilation_error_occurs_because_your_foreign_key_referencing_the_player_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_player_table_has_no_referenced_by_attribute_referencing_the_circle_table {}
pub trait this_compilation_error_occurs_because_your_foreign_key_referencing_the_player_table_needs_to_define_a_strategy_for_on_soft_delete_or_the_player_table_has_no_referenced_by_attribute_referencing_the_referee_table {}
const _: () = {
    use self::this_compilation_error_occurs_because_the_circle_table_has_no_foreign_key_attribute_referencing_the_player_table;
    use self::this_compilation_error_occurs_because_the_referee_table_has_no_foreign_key_attribute_referencing_the_player_table;
};
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct PlayerId {
    value: u64,
}
impl Default for PlayerId {
    fn default() -> PlayerId {
        PlayerId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for PlayerId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "PlayerId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for PlayerId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Player> for PlayerId {
    fn from(value: &Player) -> Self {
        PlayerId {
            value: value.id.clone(),
        }
    }
}
impl From<&Player> for Option<PlayerId> {
    fn from(value: &Player) -> Option<PlayerId> {
        Some(PlayerId {
            value: value.id.clone(),
        })
    }
}
impl From<&PlayerId> for Option<PlayerId> {
    fn from(value: &PlayerId) -> Option<PlayerId> {
        use crate::spacetimedsl::Wrapper;
        Some(PlayerId::new(value.value()))
    }
}
impl From<&PlayerId> for PlayerId {
    fn from(value: &PlayerId) -> Self {
        use crate::spacetimedsl::Wrapper;
        PlayerId::new(value.value())
    }
}
impl Player {
    ///
    pub fn get_id(&self) -> PlayerId {
        use crate::spacetimedsl::Wrapper;
        PlayerId::new(self.id.clone())
    }
}

// Generated DSL methods:
// count_of_all_players
// create_player
// get_all_players
// get_player_by_id
